# zaspe-sharp

./: AUTHORS  Base.iss  ProjectHome.md  README  TODO  TODO.md  ZaspeSharp.mds  ZaspeSharp.sln  build.bat  sdk_to_runtime.bat
AttendanceManager/: Attendance.Properties.cs  AttendanceManager.cs  AttendanceManager.csproj
AttendancesManager/: AssemblyInfo.cs  AttendanceExceptions.cs  Makefile
Database/: data.db
EventTypesManager/: EventType.Properties.cs  EventType.cs  EventTypeManager.Methods.cs  EventTypesManager.cs  EventTypesManager.mdp  Makefile
EventsManager/: AssemblyInfo.cs  Event.Properties.cs  Event.cs  EventsManager.Properties.cs  EventsManager.cs  EventsManager.csproj  EventsManager.mdp  eventsmanager.pc.in
GUI/: About.cs  AcercaDe.cs  AddPerson.cs  AssemblyInfo.cs  AttendancesReport.cs  GUI.csproj  GUI.mdp  MainWindow.cs  ModifyEvent.cs
GUI/CustomWidgets/: CustomCellRendererToggle.cs  CustomTreeViewColumn.cs
GUI/glade/: add_event.glade  add_person.glade  main_window.glade
InstrumentsManager/: AssemblyInfo.cs  Instrument.Properties.cs  InstrumentManager.csproj  InstrumentsManager.Properties.cs  InstrumentsManager.cs  InstrumentsManager.csproj  InstrumentsManager.mdp  instrumentsmanager.pc.in
MonoReporter/: MonoReporter.mdp  MonoReporter.mds  Page.cs
MonoReporter/SvgReader/: Exceptions.cs  SvgDocument.cs  Utils.cs
MonoReporter/SvgReader/Shapes/: Line.cs  Rectangle.cs  Table.cs
MonoReporter/Test/: MainWindow.cs
PersonsManager/: AssemblyInfo.cs  Makefile  Person.cs  PersonExceptions.cs  PersonsManager.Properties.cs  PersonsManager.cs  PersonsManager.csproj  personsmanager.pc.in
ReportGenerator/: ReportGUI.cs
ReportGenerator/ReportTypes/: SimpleAttendanceList.cs  SimplePersonsList.cs
Runtime/: Runtime.iss
SDK/: SDK.iss
Tests/: AssemblyInfo.cs  ControladorAsistenciasTest.cs  ControladorEventosTest.cs  ControladorInstrumentosTest.cs  Tests.csproj  Tests.mdp
gtk-sharp-installer/: incoming_to_sdk.bat
prebuild-2.0.1-patched/: AUTHORS  Makefile.am  Makefile.in  aclocal.m4  prebuild.in
prebuild-2.0.1-patched/Core/: Kernel.cs
prebuild-2.0.1-patched/Core/Nodes/: DataNode.cs  ExcludeNode.cs  FilesNode.cs  MatchNode.cs
prebuild-2.0.1-patched/Core/Utilities/: Helper.cs
prebuild-2.0.1-patched/Properties/: AssemblyInfo.cs
tags/gtk-sharp-installer-2.10.1-1/Runtime/: License.txt
tags/zaspe-sharp-0.0.1/: ZaspeSharp.mds
tags/zaspe-sharp-0.0.1/AttendanceManager/: AssemblyInfo.cs  AttendanceManager.Methods.cs  AttendanceManager.mdp
tags/zaspe-sharp-0.0.1/Database/: data.db  schema_sqlite3.sql
tags/zaspe-sharp-0.0.1/EventTypesManager/: AssemblyInfo.cs  EventTypeManager.Properties.cs  EventTypesExceptions.cs  EventTypesManager.csproj
tags/zaspe-sharp-0.0.1/EventsManager/: AssemblyInfo.cs  Event.Methods.cs  EventsManager.csproj  EventsManager.mdp
tags/zaspe-sharp-0.0.1/GUI/: About.cs  GUI.mdp
tags/zaspe-sharp-0.0.1/InstrumentsManager/: AssemblyInfo.cs  InstrumentsManager.Methods.cs  InstrumentsManager.csproj
tags/zaspe-sharp-0.0.1/PersonsManager/: AssemblyInfo.cs  (+3 more)
tags/zaspe-sharp-0.1.0/: INSTALL  ZaspeSharp.mds  configure  zaspe-sharp.xml
trunk/: ZaspeSharp.sln
trunk/AttendanceManager/: Attendance.Properties.cs  Attendance.cs  AttendanceManager.mdp
trunk/Database/: data.db  schema_sqlite3.sql
trunk/EventTypesManager/: EventTypeManager.csproj  EventTypesManager.csproj  EventTypesManager.mdp
trunk/EventsManager/: Event.cs  EventsExceptions.cs  EventsManager.csproj
trunk/GUI/: AcercaDe.cs  AddEvent.cs  AddPerson.cs  AssemblyInfo.cs  GUI.csproj  GUI.mdp  MainWindow.cs
trunk/InstrumentsManager/: InstrumentsExceptions.cs
trunk/PersonsManager/: Person.cs  PersonsManager.Methods.cs  PersonsManager.csproj  PersonsManager.mdp
trunk/Tests/: ControladorPersonasTest.cs  Tests.csproj  Tests.mdp
trunk/prebuild-2.0.1-patched/: ChangeLog  README  configure  configure.ac
trunk/prebuild-2.0.1-patched/Core/: Kernel.cs  WarningException.cs
trunk/prebuild-2.0.1-patched/Core/Attributes/: DataNodeAttribute.cs
trunk/prebuild-2.0.1-patched/Core/Nodes/: FileNode.cs  ProjectNode.cs  ReferenceNode.cs  SolutionNode.cs
trunk/prebuild-2.0.1-patched/Core/Parse/: Preprocessor.cs
trunk/prebuild-2.0.1-patched/Core/Targets/: MonoDevelopTarget.cs  NAntTarget.cs  VS2003Target.cs  VS2005Target.cs
trunk/prebuild-2.0.1-patched/data/: prebuild-1.7.xsd
trunk/zaspe-sharp/: AUTHORS  ChangeLog  Makefile.include  README  README.txt  TODO  ZaspeSharp.mds  ZaspeSharp.sln  zaspe-sharp.xml
wiki/: TODO.wiki
zaspe-sharp/: ChangeLog  INSTALL.txt  Makefile  README  TODO  zaspe-sharp-linux.xml  zaspe-sharp-win.xml  zaspe-sharp.xml
zaspe-sharp/AttendanceManager/: AttendanceExceptions.cs
zaspe-sharp/AttendancesManager/: Attendance.Properties.cs  Attendance.cs  AttendanceManager.Methods.cs  AttendancesManager.mdp
zaspe-sharp/Database/: data.db
zaspe-sharp/EventTypesManager/: EventType.Properties.cs  EventTypeManager.Methods.cs  EventTypesExceptions.cs  EventTypesManager.cs  EventTypesManager.mdp
zaspe-sharp/EventsManager/: Event.Methods.cs  EventsManager.Methods.cs  EventsManager.Properties.cs  EventsManager.mdp
zaspe-sharp/GUI/: AddEvent.cs  AddPerson.cs  AttendancesReport.cs  ChangeLog  GUI.csproj  GUI.mdp  MainWindow.cs  Makefile  ModifyEvent.cs  ModifyPerson.cs
zaspe-sharp/InstrumentsManager/: Instrument.Properties.cs  Instrument.cs  InstrumentsManager.Methods.cs  InstrumentsManager.Properties.cs  InstrumentsManager.cs  InstrumentsManager.mdp
zaspe-sharp/MonoReporter/: AssemblyInfo.cs  CairoDrawingFunctions.cs  MonoReporter.mdp  MonoReporter.mds  Page.cs  Report.cs
zaspe-sharp/PersonsManager/: Person.Properties.cs  Person.cs  PersonsManager.Methods.cs  PersonsManager.csproj
zaspe-sharp/ReportGenerator/: ReportGUI.cs
zaspe-sharp/Tests/: ControladorTiposEventoTest.cs  PersonsManagerTest.cs  Tests.csproj
(+172 files in other folders)
